Remove pointless /dashboard/ in url

--- a/views/dashboard.haml
+++ b/views/dashboard.haml
@@ -4,4 +4,4 @@
 
 #container
 :javascript
-  new TableOrderer('container',{url : '/dashboard.json/#{params['project']}/#{params['threshold']}'});
+  new TableOrderer('container',{url : '/json/#{params['project']}/#{params['threshold']}'});
